refactor: 조회 상황에서 Collectors 에서 Stream으로 변경
- 조회와 같은 불변 상황에서, Java 16버전 이상부터는 toList를 바로 사용하는 것이 더 적합